--- a/frontend/src/pages/settings/connections.module.css
+++ b/frontend/src/pages/settings/connections.module.css
@@ -24,7 +24,7 @@
   border-radius: var(--rounded);
 
   & .connected {
-    color: var(--nord-14);
+    color: var(--color-success);
   }
 
   & .disconnected {
